--- a/src/app/UserViewPage/list-view/list-view.component.sass
+++ b/src/app/UserViewPage/list-view/list-view.component.sass
@@ -7,8 +7,16 @@
   grid-gap: 10px
   margin: 10px auto
   overflow: hidden
+  cursor: pointer
 
 .userInfo__img
+
   img
     height: 80px
     width: 80px
+  .emptyImageLike
+    height: 80px
+    width: 80px
+    background: white
+    background: linear-gradient(45deg, #cacaca, transparent)
+
